ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: context-ingress
  annotations:
    kubernetes.io/ingress.class: "gce" #gce-internal
    # kubernetes.io/ingress.class: nginx
spec:
  defaultBackend:
    service:
      name: orange-service 
      port:
        number: 80
  rules:
    - http:
        paths:
        - path: /blue
          backend:
            service:
              name: blue-service
              port: 
                number: 80 # Service port 
          pathType: Prefix
        - path: /green
          backend:
            service:
              name: green-service
              port: 
                number: 80
          pathType: Prefix
